apps/corpora/corpora.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: corpora
  namespace: corpora
spec:
  selector:
    app: corpora
  type: NodePort
  ports:
  - port: 80
    name: corpora
